[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StarloBot"
version = "0.1.1"
description = "A Discord bot"
authors = [{name = "Kazooki123", email = "mgamerdinge146@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.19.0",
    "ruff>=0.1.0",
]