[package]
name = "server"
description = "Dedicated Server for StarloBot"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
thiserror = "1.0"
